feat: second commit

--- a/instagram_layout/flex/flex.html
+++ b/instagram_layout/flex/flex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load static %}
+
 <html lang="ko">
     <head>
         <meta charset="UTF-8" />
@@ -14,37 +14,37 @@
     </head>
     <body>
         <div id="container">
-            <div id="container4">
+            <div id="container1">
                 <i class="fas fa-chevron-left"></i>
                 <section class="item1">게시물</section>
             </div>
-            <div id="container5">
-                <img src="{% static 'images/top.jpg' %}" style="width: 20px;">
+            <div id="container2">
+                <img src="images/top.jpg" class="top_image">
                 <section class="item">likelion_dongguk<br><span class="dgu">동국대학교</span></section>
                 <i class="fas fa-ellipsis-h"></i>
             </div>
-            <div id="container4">
-                <img src="{% static 'images/middle.jpg' %}" style="width: 650px;" class="middle">
+            <div id="container3">
+                <img src="images/middle.jpg" class="middle_image">
             </div>
-            <span id="container1">
+            <span id="container4">
                 <i class="fas fa-heart"></i>
                 <i class="fas fa-comment"></i>
                 <i class="fas fa-paper-plane"></i>
                 <i class="fas fa-bookmark"></i>
             </span>
-            <div id="container3">
+            <div id="container5">
                 <section class="item">ustar1210님 외 55명이 좋아합니다</section>
             </div>
             <div id="container6">
                 <section class="item2">3월 29일</section>
             </div>
-            <span id="container2">
+            <span id="container7">
                 <i class="fas fa-house-user"></i>
                 <i class="fas fa-compass"></i>
                 <i class="far fa-caret-square-right"></i>
                 <i class="far fa-plus-square"></i>
                 <i class="fas fa-paper-plane"></i>
-                <img src="{% static 'images/bottom.jpg' %}">
+                <img src="images/bottom.jpg" class="bottom_image">
             </span>
         </div>
     </body>
